# repeat_finite

./: Cargo.toml  LICENSE
src/: lib.rs
tests/: tests_one.rs
