[package]
name = "repeat_finite"
version = "0.1.0"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "It is like repeat(), but, you know, finite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
nightly = []

